--- a/overrides/assets/stylesheets/home.css
+++ b/overrides/assets/stylesheets/home.css
@@ -256,10 +256,7 @@ h2.secondary-headline, h3.trusted-by {
 }
 
 .img-col {
-  display: flex;
-  flex-direction: column;
-  flex: 1;
-  max-width: 80%;
+  flex: 0 0 33.3333%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -508,11 +505,6 @@ h2.secondary-headline, h3.trusted-by {
 
   .case-studies-container .col .normal-text {
     padding-right: .5em;
-  }
-
-  .img-row {
-    flex-direction: column;
-    align-items: center;
   }
 }
 
