--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,7 +1,7 @@
 :root {
   --md-primary-fg-color: #f3f1f2;
-  --md-primary-fg-color--dark: #0D4984;
-  --md-primary-fg-color--light: #6593C8;
+  --md-primary-fg-color--dark: #0865AD;
+  --md-primary-fg-color--light: #6695CA;
   --nav-item-color: #4d4d4d;
 }
 
