Add new CNCF case study to Knative website (#5987)
* Add new CNCF case study to Knative website

* Apply suggested changes

* Add latest case-studies

--- a/overrides/assets/stylesheets/home.css
+++ b/overrides/assets/stylesheets/home.css
@@ -380,17 +380,8 @@ h2.secondary-headline, h3.trusted-by {
   max-width: 110px
 }
 
-.case-studies-container .logo .deepc {
-  width: 108px;
-}
-
-.case-studies-container .logo .outfit7 {
-  max-height: 18px;
-  max-width: 98px;
-}
-
-.case-studies-container .logo .puppet {
-  width: 94px;
+.case-studies-container .logo .sva {
+  width: 60px;
 }
 
 .case-studies-container .normal-text {
