Swap website colours of the Home page
Signed-off-by: SHRAVANI KAWARE <97099574+ShravaniAK@users.noreply.github.com>

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,8 +1,8 @@
 :root {
   --md-primary-fg-color: #f3f1f2;
-  --md-primary-fg-color--dark: #0865AD;
-  --md-primary-fg-color--light: #6695CA;
-  --nav-item-color: #4d4d4d;
+  --md-primary-fg-color--dark: #0D4984;
+  --md-primary-fg-color--light: #6593C8;
+  --nav-item-color: #494848;
 }
 
 .md-clipboard {
