new design implementation for footer and removed the pre-footer section
Signed-off-by: SHRAVANI KAWARE <97099574+ShravaniAK@users.noreply.github.com>

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -3,6 +3,7 @@
   --md-primary-fg-color--dark: #0865AD;
   --md-primary-fg-color--light: #6695CA;
   --nav-item-color: #4d4d4d;
+  --md-footer-bg-color:#081729;
 }
 
 .md-clipboard {
@@ -356,6 +357,12 @@ border-radius: 20% 0 0 0 ;
 
 .md-footer-meta {
   background-color: var(--md-footer-bg-color);
+}
+
+.md-footer-meta__inner{
+  display:flex;
+  flex-direction: row;
+  margin:0.5rem 1.5rem;
 }
 
 .footer-links {
