Update button border radius on Tutorial page

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -204,6 +204,7 @@ border-radius: 0.7rem 0 0 0 ;
 
 .md-typeset .md-button {
   color: #024c93;
+  border-radius: 0.7rem;
 }
 
 /* Giving h4 tag distinctive style because it is non-differntial with bold text */
