--- a/overrides/partials/footer.html
+++ b/overrides/partials/footer.html
@@ -73,13 +73,19 @@
       </div>
 
       <div class="footer-links md-footer-copyright">
-        <a href="https://www.linuxfoundation.org/legal/trademark-usage">Trademarks</a> |
-        <a href="https://policies.google.com/privacy">Privacy Policy</a> |
-        <a href="/docs/about-analytics-cookies/">Cookie Usage</a> |
-        <a href="https://github.com/knative/docs/blob/main/LICENSE">Apache-2.0 LICENSE</a> |
-        <a href="https://github.com/knative/docs/blob/main/LICENSE-docs">CC BY 4.0 LICENSE</a> |
+        <a href="https://www.linuxfoundation.org/legal/trademark-usage">Trademarks</a> 
+        <span class="pipe">|</span>
+        <a href="https://policies.google.com/privacy">Privacy Policy</a> 
+        <span class="pipe">|</span>
+        <a href="/docs/about-analytics-cookies/">Cookie Usage</a> 
+        <span class="pipe">|</span>
+        <a href="https://github.com/knative/docs/blob/main/LICENSE">Apache-2.0 LICENSE</a> 
+        <span class="pipe">|</span>
+        <a href="https://github.com/knative/docs/blob/main/LICENSE-docs">CC BY 4.0 LICENSE</a> 
+        <span class="pipe">|</span>
         <a href="https://squidfunk.github.io/mkdocs-material/">Made by Material MkDocs</a>
-      </div>
+    </div>
+    
 
       <!-- Social links -->
       <!-- {% include "partials/social.html" %} -->
